# agentic-ai-autogen

./: .gitignore  README.md  app.py  config.py  logger.py  main.py  pipeline.py  pyproject.toml  setup.txt
agents/: bug_analysis_agent.py  classifier_agent.py  csv_reader_agent.py  feature_extractor_agent.py  quality_critic_agent.py  state.py  ticket_creator_agent.py  tracer.py
data-gen/: generate.py
data/input/: app_reviews.csv  app_store_reviews.csv  expected_classifications.csv  support_emails.csv
tests/: conftest.py  test_bug_analysis_agent.py  test_classifier_agent.py  test_csv_reader_agent.py  test_feature_extractor_agent.py  test_quality_critic_agent.py  test_ticket_creator_agent.py
tests/fixtures/: emails.csv  reviews.csv
