[project]
name = "agentic-ai-capstone"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.96.0",
    "autogen-agentchat>=0.4.0",
    "autogen-ext[anthropic]>=0.4.0",
    "tiktoken>=0.7.0",
    "langfuse>=4.5.0",
    "pandas>=3.0.2",
    "python-dotenv>=1.1.1",
    "streamlit>=1.56.0",
    "plotly>=6.7.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.1.0",
]
